@@ -84,7 +84,7 @@
     <setting label="30021" type="labelenum" values="IMDb|Rotten Tomatoes|MetaCritic|themoviedb.org" id="mratingsource" default="IMDb"/>
     <setting label="30112" subsetting="true" type="bool" id="alsorotten" default="false" visible="!eq(-1,1)"/>
     <setting label="30110" subsetting="true" type="select" values="TomatoMeter All Critics|TomatoMeter Audience Score|Average Rating All Critics|Average Rating Audience Score" id="tomato" default="TomatoMeter All Critics" visible="eq(-2,1)|eq(-1,true)"/>
-    <setting label="30116" subsetting="true" type="text" id="omdbapikey" default="Please Enter Your OMDB API Key" visible="eq(-3,1)|eq(-2,true)"/>
+    <setting label="30116" subsetting="true" type="text" id="omdbapikey2" default="Please Enter Your OMDB API Key" visible="eq(-3,1)|eq(-2,true)"/>
     <setting label="30118" subsetting="true" type="bool" id="alsootherrotten" default="false" visible="eq(-4,1)"/>
     <setting label="30111" subsetting="true" type="bool" id="alsoimdb" default="false" visible="!eq(-5,0)"/>
     <setting label="30113" subsetting="true" type="bool" id="alsometa" default="false" visible="!eq(-6,2)"/>
@@ -96,7 +96,7 @@
     <setting type="lsep" label="30031"/>
     <setting label="30032" type="labelenum" values="IMDb|themoviedb.org" id="certificationssource" default="IMDb"/>
     <setting label="30033" subsetting="true" type="select" values="Argentina|Australia|Austria|Belgium|Brazil|Bulgaria|Canada|China|Colombia|Chile|Croatia|Czech Republic|Denmark|Finland|France|Germany|Greece|Hong Kong|Hungary|Iceland|India|Israel|Italy|Japan|Mexico|Netherlands|Norway|Pakistan|Poland|Portugal|Romania|Russia|Serbia|Singapore|Slovenia|Spain|Sweden|Switzerland|Thailand|Turkey|UK|Uruguay|United States|Venezuela" id="imdbcertcountry" default="United States" visible="eq(-1,0)"/>
-    <setting label="30033" subsetting="true" type="select" values="au|bg|br|ca|cz|ge|de|dk|ee|es|fi|fr|gb|gr|hr|hu|id|il|in|it|ir|jp|kr|lt|lv|mx|nl|no|pl|pt|ru|si|sv|th|tr|ua|us|vn|zh" id="tmdbcertcountry" default="us" visible="eq(-2,1)"/>/>
+    <setting label="30033" subsetting="true" type="select" values="au|bg|br|ca|cz|ge|de|dk|ee|es|fi|fr|gb|gr|hr|hu|id|il|in|it|ir|jp|kr|lt|lv|mx|nl|no|pl|pt|ru|si|sv|th|tr|ua|us|vn|zh" id="tmdbcertcountry" default="us" visible="eq(-2,1)"/>
     <setting type="sep"/>
     <setting label="30035" type="text" id="certprefix" default="Rated "/>
     <setting type="sep"/>
